# rust-ocl-acoustic-fdtd

./: .env.example  Cargo.toml  readme.md
src/: constants.rs  env.rs  kernels.rs  main.rs  parameters.rs  scene.rs  simulation.rs
src/kernels/: fdtd.cl
